Added dictionary {province: (apartment_avg_sqm, house_avg_sqm)}

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -910,39 +910,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "province\n",
-      "Antwerp            3482.816385\n",
-      "Brussels           3998.792148\n",
-      "East Flanders      3117.565545\n",
-      "Flemish Brabant    3548.207542\n",
-      "Hainaut            2042.979395\n",
-      "Limburg            2985.677069\n",
-      "Liège              2311.818400\n",
-      "Luxembourg         2453.159320\n",
-      "Namur              2403.144334\n",
-      "Walloon Brabant    3378.432882\n",
-      "West Flanders      6197.023966\n",
-      "Name: price per sqm, dtype: float64\n",
-      "province\n",
-      "Antwerp            2465.799855\n",
-      "Brussels           3427.781607\n",
-      "East Flanders      2085.230834\n",
-      "Flemish Brabant    2731.065252\n",
-      "Hainaut            1572.320676\n",
-      "Limburg            1990.051950\n",
-      "Liège              1705.697314\n",
-      "Luxembourg         1743.772869\n",
-      "Namur              1901.791982\n",
-      "Walloon Brabant    2768.295712\n",
-      "West Flanders      2768.103183\n",
-      "Name: price per sqm, dtype: float64\n"
+      "{'Belgium': (4159.98534611508, 2387.2586314324344), 'Antwerp': (3482.816385077303, 2465.799854873969), 'Brussels': (3998.792147553354, 3427.7816067074496), 'East Flanders': (3117.565544958032, 2085.23083350861), 'Flemish Brabant': (3548.2075417100777, 2731.065251720343), 'Hainaut': (2042.9793954098095, 1572.3206764310692), 'Limburg': (2985.6770694591787, 1990.0519504209542), 'Liège': (2311.8183997451233, 1705.697314435258), 'Luxembourg': (2453.1593202094045, 1743.7728693008744), 'Namur': (2403.1443341676813, 1901.7919822023593), 'Walloon Brabant': (3378.4328815603008, 2768.2957120779565), 'West Flanders': (6197.023966398003, 2768.1031829281364)}\n"
      ]
     }
    ],
@@ -951,9 +926,72 @@
     "# Group apartments/houses by province and calculate the mean price per sqm\n",
     "apartments_per_sqm = apartments.groupby('province')['price per sqm'].mean()\n",
     "houses_per_sqm = houses.groupby('province')['price per sqm'].mean()\n",
-    "print(apartments_per_sqm)\n",
-    "print(houses_per_sqm)\n",
-    "\n"
+    "\n",
+    "# Convert to list which is ordered by province alphabetically\n",
+    "apartments_per_sqm_list = apartments_per_sqm.tolist()\n",
+    "houses_per_sqm_list = houses_per_sqm.tolist()\n",
+    "\n",
+    "# Redefine province names without 'Belgium' and sort alphabetically\n",
+    "province_names = ['Brussels', 'West Flanders', 'East Flanders', 'Antwerp', 'Liège', 'Flemish Brabant', 'Hainaut', 'Walloon Brabant', 'Luxembourg', 'Namur', 'Limburg']\n",
+    "province_names.sort()\n",
+    "\n",
+    "# Define empty dict, add Belgium averages and then iterate through averages list and append to respective province keys\n",
+    "grouped_avg_dict = {}\n",
+    "grouped_avg_dict['Belgium'] = (apartment_sqm_mean, house_sqm_mean)\n",
+    "i = 0\n",
+    "for province in province_names:\n",
+    "    if i < 11:\n",
+    "        grouped_avg_dict[province] = apartments_per_sqm_list[i] , houses_per_sqm_list[i]\n",
+    "        i += 1\n",
+    "print(grouped_avg_dict)      \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Belgium', 'Brussels', 'West Flanders', 'East Flanders', 'Antwerp', 'Liège', 'Flemish Brabant', 'Hainaut', 'Walloon Brabant', 'Luxembourg', 'Namur', 'Limburg']\n",
+      "[3003.5, 3819.13, 5203.27, 2564.81, 3067.77, 1872.08, 2973.16, 1705.16, 2914.33, 1870.88, 2068.91, 2510.84]\n"
+     ]
+    }
+   ],
+   "source": [
+    "province_names\n",
+    "province_sqm_avgs\n",
+    "property_type = ('Apartment' , 'House')\n",
+    "for index, row in apartments_per_sqm.iterrwows():\n",
+    "    row[]"
    ]
   }
  ],
