Now analysis/cleaning notebooks correctly read csv from data folder.

--- a/data-exploration/Data_Analysis.ipynb
+++ b/data-exploration/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -233,14 +233,14 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read dataframe\n",
-    "properties = pd.read_csv('data\\cleaned_output.csv')\n",
+    "properties = pd.read_csv('..\\data\\cleaned_output.csv')\n",
     "properties.head()"
    ]
   },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
