latest edition of repo - still needs cleaning and finalising but was absent 20/07/23.

--- a/model-building/3_Data_modeling_houses.ipynb
+++ b/model-building/3_Data_modeling_houses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +57,13 @@
      "output_type": "stream",
      "text": [
       "There are 4625 rows.\n",
-      "There are 170 properties with a value of more than 2,000,000€\n",
-      "There are 17 properties with more than 10 bedrooms.\n",
-      "There are 12 properties with a living area greater than 100sqm.\n",
-      "There are 20 properties with a total property area greater than 750sqm.\n",
-      "There are 19 properties with a total property land greater than 20000sqm.\n",
-      "There are 7 properties with a terrace area greater than 250sqm.\n",
-      "There are 3 properties with more than 4 facades.\n",
+      "There were 170 properties with a value of more than 2,000,000€ that have been removed.\n",
+      "There were 17 properties with more than 10 bedrooms that have been removed.\n",
+      "There were 12 properties with a living area greater than 100sqm that have been removed.\n",
+      "There were 20 properties with a total property area greater than 750sqm that have been removed.\n",
+      "There were 19 properties with a total property land greater than 20000sqm that have been removed.\n",
+      "There were 7 properties with a terrace area greater than 250sqm that have been removed.\n",
+      "There were 3 properties with more than 4 facades that have been removed.\n",
       "\n",
       "248 outliers have been removed from the dataframe in total.\n",
       "There are 4377 rows.\n"
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -432,19 +432,20 @@
      "output_type": "stream",
      "text": [
       "There are 4625 rows.\n",
-      "There are 170 properties with a value of more than 2,000,000€\n",
-      "There are 17 properties with more than 10 bedrooms.\n",
-      "There are 12 properties with a living area greater than 100sqm.\n",
-      "There are 20 properties with a total property area greater than 750sqm.\n",
-      "There are 19 properties with a total property land greater than 20000sqm.\n",
-      "There are 7 properties with a terrace area greater than 250sqm.\n",
-      "There are 3 properties with more than 4 facades.\n",
+      "There were 170 properties with a value of more than 2,000,000€ that have been removed.\n",
+      "There were 17 properties with more than 10 bedrooms that have been removed.\n",
+      "There were 12 properties with a living area greater than 100sqm that have been removed.\n",
+      "There were 20 properties with a total property area greater than 750sqm that have been removed.\n",
+      "There were 19 properties with a total property land greater than 20000sqm that have been removed.\n",
+      "There were 7 properties with a terrace area greater than 250sqm that have been removed.\n",
+      "There were 3 properties with more than 4 facades that have been removed.\n",
       "\n",
       "248 outliers have been removed from the dataframe in total.\n",
       "There are 2784 rows.\n",
       "\n",
-      "The score of the training set is 0.7119470491924487\n",
-      "The score of the testing set is 0.4699935352461757\n"
+      "{'max_depth': 6, 'min_weight_fraction_leaf': 0.0035}\n",
+      "The score of the training set is 0.6399156527811802\n",
+      "The score of the testing set is 0.5105692527952603\n"
      ]
     },
     {
@@ -579,7 +580,7 @@
        "2406              0                      1  "
       ]
      },
-     "execution_count": 533,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,14 +605,76 @@
     "y = houses['price'].to_numpy()\n",
     "\n",
     "#Split data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)\n",
     "\n",
-    "regressor = DecisionTreeRegressor(max_depth=12,min_weight_fraction_leaf=0.004)\n",
+    "\n",
+    "# With GridsearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "regressor = DecisionTreeRegressor()\n",
+    "params = {'max_depth': [ 4, 6, 8, 10, 12], 'min_weight_fraction_leaf': [0.002, 0.003, 0.0035, 0.004, 0.0045, 0.006]}\n",
+    "grid_search = GridSearchCV(regressor, params, cv=10)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "best_params = grid_search.best_params_\n",
+    "regressor = DecisionTreeRegressor(max_depth=best_params['max_depth'], min_weight_fraction_leaf=best_params['min_weight_fraction_leaf'])\n",
+    "print(best_params)\n",
     "regressor.fit(X_train, y_train)\n",
     "print(\"The score of the training set is\", regressor.score(X_train, y_train))\n",
     "print(\"The score of the testing set is\", regressor.score(X_test, y_test))\n",
     "houses.head()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7.6\n",
+      "There are 4625 rows.\n",
+      "There were 170 properties with a value of more than 2,000,000€ that have been removed.\n",
+      "There were 17 properties with more than 10 bedrooms that have been removed.\n",
+      "There were 12 properties with a living area greater than 100sqm that have been removed.\n",
+      "There were 20 properties with a total property area greater than 750sqm that have been removed.\n",
+      "There were 19 properties with a total property land greater than 20000sqm that have been removed.\n",
+      "There were 7 properties with a terrace area greater than 250sqm that have been removed.\n",
+      "There were 3 properties with more than 4 facades that have been removed.\n",
+      "\n",
+      "248 outliers have been removed from the dataframe in total.\n",
+      "There are 4377 rows.\n",
+      "\n",
+      "Mean MAE: 0.564 (0.073)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost\n",
+    "print(xgboost.__version__)\n",
+    "\n",
+    "# Define houses df & subsets\n",
+    "houses = properties[properties['type of property'] == 'HOUSE']\n",
+    "print(\"There are\", houses.shape[0], \"rows.\")\n",
+    "houses = cleanoutliers.clean_outliers(houses)\n",
+    "houses = cleanup.drop_column(houses, ['type of property', 'subtype of property', 'province', 'locality', 'postalCode'])\n",
+    "houses = cleanup.drop_column(houses, ['garden area', 'terrace area','living area'])\n",
+    "#houses = houses[houses['living area'] != 0]\n",
+    "print(\"There are\", houses.shape[0], \"rows.\\n\")\n",
+    "X = cleanup.drop_column(houses, 'price').to_numpy()\n",
+    "y = houses['price'].to_numpy()\n",
+    "\n",
+    "regressor = xgboost.XGBRegressor()\n",
+    "#regressor.fit(X_train, y_train)\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "cv = RepeatedKFold(n_splits = 10, n_repeats = 3)\n",
+    "scores = cross_val_score(regressor, X_train, y_train, cv=10, n_jobs = 1)\n",
+    "\n",
+    "\n",
+    "scores = np.absolute(scores)\n",
+    "print('Mean MAE: %.3f (%.3f)' % (scores.mean(), scores.std()))\n"
    ]
   }
  ],
