Huge file structure overhaul.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "\"\\n# Return -1 to 'x'\\nfor column in properties.columns:\\n    for index, value in properties[column].items():\\n        if value == -1:\\n            properties.at[index, column] = 'x'\\nproperties\\n\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1100,16 +1100,256 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I see that the -1 has been cleaned so my data set is now ready for exporting, and use!"
+    "I see that the -1 has been cleaned. Finally I replace all of the blank spaces in the column titles with underscores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_column_names = [col.replace(' ', '_') for col in properties.columns]\n",
+    "properties.columns = new_column_names\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My data set is now ready for exporting, and use!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "properties.to_csv('..\\data\\cleaned_output.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>type_of_property</th>\n",
+       "      <th>subtype_of_property</th>\n",
+       "      <th>province</th>\n",
+       "      <th>locality</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>price</th>\n",
+       "      <th>number_of_bedrooms</th>\n",
+       "      <th>living_area</th>\n",
+       "      <th>fully_equipped_kitchen</th>\n",
+       "      <th>...</th>\n",
+       "      <th>open_fire</th>\n",
+       "      <th>terrace</th>\n",
+       "      <th>terrace_area</th>\n",
+       "      <th>garden</th>\n",
+       "      <th>garden_area</th>\n",
+       "      <th>total_property_area</th>\n",
+       "      <th>total_land_area</th>\n",
+       "      <th>number_of_facades</th>\n",
+       "      <th>swimming_pool</th>\n",
+       "      <th>state_of_the_building</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9656</th>\n",
+       "      <td>10492614</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>Liège</td>\n",
+       "      <td>Saint-Nicolas</td>\n",
+       "      <td>4420.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>206.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10274</th>\n",
+       "      <td>10664145</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>CHALET</td>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>DURBUY</td>\n",
+       "      <td>6940.0</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3232</th>\n",
+       "      <td>10578200</td>\n",
+       "      <td>APARTMENT</td>\n",
+       "      <td>APARTMENT</td>\n",
+       "      <td>Hainaut</td>\n",
+       "      <td>La Louviere</td>\n",
+       "      <td>7110.0</td>\n",
+       "      <td>39000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>needs renovating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8340</th>\n",
+       "      <td>10248737</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>Liège</td>\n",
+       "      <td>Flémalle</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>needs renovating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1630</th>\n",
+       "      <td>10576318</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>Liège</td>\n",
+       "      <td>Liège Wandre</td>\n",
+       "      <td>4020.0</td>\n",
+       "      <td>59000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>needs renovating</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id type_of_property subtype_of_property    province  \\\n",
+       "9656   10492614            HOUSE               HOUSE       Liège   \n",
+       "10274  10664145            HOUSE              CHALET  Luxembourg   \n",
+       "3232   10578200        APARTMENT           APARTMENT     Hainaut   \n",
+       "8340   10248737            HOUSE               HOUSE       Liège   \n",
+       "1630   10576318            HOUSE               HOUSE       Liège   \n",
+       "\n",
+       "            locality  postalCode    price  number_of_bedrooms  living_area  \\\n",
+       "9656   Saint-Nicolas      4420.0  20000.0                 3.0         38.0   \n",
+       "10274         DURBUY      6940.0  22000.0                 2.0          0.0   \n",
+       "3232     La Louviere      7110.0  39000.0                 1.0          0.0   \n",
+       "8340        Flémalle      4400.0  40000.0                 2.0         21.0   \n",
+       "1630    Liège Wandre      4020.0  59000.0                 4.0         29.0   \n",
+       "\n",
+       "       fully_equipped_kitchen  ...  open_fire  terrace  terrace_area  garden  \\\n",
+       "9656                      1.0  ...        0.0      1.0           NaN     NaN   \n",
+       "10274                     NaN  ...        0.0      1.0          15.0     NaN   \n",
+       "3232                      0.0  ...        0.0      NaN           NaN     NaN   \n",
+       "8340                      0.0  ...        0.0      NaN           NaN     NaN   \n",
+       "1630                      0.0  ...        0.0      NaN           NaN     NaN   \n",
+       "\n",
+       "       garden_area  total_property_area  total_land_area  number_of_facades  \\\n",
+       "9656           NaN                206.0            194.0                NaN   \n",
+       "10274          NaN                 40.0            200.0                4.0   \n",
+       "3232           NaN                 44.0              0.0                2.0   \n",
+       "8340           NaN                106.0            110.0                3.0   \n",
+       "1630           NaN                144.0             80.0                2.0   \n",
+       "\n",
+       "       swimming_pool  state_of_the_building  \n",
+       "9656             0.0                   good  \n",
+       "10274            0.0                      0  \n",
+       "3232             0.0       needs renovating  \n",
+       "8340             0.0       needs renovating  \n",
+       "1630             0.0       needs renovating  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "properties.head()"
    ]
   }
  ],
