Now contains a working API for model.

--- a/model-building/3_data_modeling_houses_nonlinear.ipynb
+++ b/model-building/3_data_modeling_houses_nonlinear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "[4377 rows x 16 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -440,18 +440,11 @@
      "output_type": "stream",
      "text": [
       "There are 4625 rows.\n",
-      "There were 170 properties with a price value of more than 2000000 that have been removed.\n",
-      "There were 17 properties with a number_of_bedrooms value of more than 10 that have been removed.\n",
-      "There were 12 properties with a living_area value of more than 100 that have been removed.\n",
-      "There were 20 properties with a total_property_area value of more than 750 that have been removed.\n",
-      "There were 19 properties with a total_land_area value of more than 20000 that have been removed.\n",
-      "There were 7 properties with a terrace_area value of more than 250 that have been removed.\n",
-      "There were 3 properties with a number_of_facades value of more than 4 that have been removed.\n",
-      "There are 2784 rows.\n",
+      "There are 2920 rows.\n",
       "\n",
-      "{'max_depth': 6, 'min_weight_fraction_leaf': 0.006}\n",
-      "The score of the training set is 0.6337930660169264\n",
-      "The score of the testing set is 0.49886348439878925\n"
+      "{'max_depth': 10, 'min_weight_fraction_leaf': 0.006}\n",
+      "The score of the training set is 0.6941764901715921\n",
+      "The score of the testing set is 0.5948051111950129\n"
      ]
     },
     {
@@ -592,7 +585,7 @@
        "2406            120.0            0.0                      1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +600,7 @@
     "# Define houses df & subsets\n",
     "houses = properties[properties['type_of_property'] == 'HOUSE']\n",
     "print(\"There are\", houses.shape[0], \"rows.\")\n",
-    "houses = cleanup.clean_outliers(houses)\n",
+    "#houses = cleanup.clean_outliers(houses)\n",
     "houses = cleanup.drop_column(houses, ['type_of_property', 'subtype_of_property', 'province', 'locality', 'postalCode'])\n",
     "houses = cleanup.drop_column(houses, ['garden_area', 'terrace_area','number_of_facades','open_fire'])\n",
     "houses = houses[houses['living_area'] != 0]\n",
@@ -638,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +649,7 @@
       "There were 3 properties with a number_of_facades value of more than 4 that have been removed.\n",
       "There are 4377 rows.\n",
       "\n",
-      "Mean MAE: 0.564 (0.069)\n"
+      "Mean MAE: 0.518 (0.213)\n"
      ]
     }
    ],
