--- a/model-building/4_data_modeling_model.ipynb
+++ b/model-building/4_data_modeling_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -47,41 +47,33 @@
      "output_type": "stream",
      "text": [
       "There are 6347 rows before cleaning.\n",
-      "There were 201 properties with a price value of more than 2000000 that have been removed.\n",
-      "There were 19 properties with a number_of_bedrooms value of more than 10 that have been removed.\n",
-      "There were 16 properties with a living_area value of more than 100 that have been removed.\n",
-      "There were 20 properties with a total_property_area value of more than 750 that have been removed.\n",
-      "There were 19 properties with a total_land_area value of more than 20000 that have been removed.\n",
-      "There were 7 properties with a terrace_area value of more than 250 that have been removed.\n",
-      "There were 3 properties with a number_of_facades value of more than 4 that have been removed.\n",
-      "There are 3804 rows after cleaning.\n",
+      "There are 3950 rows after cleaning.\n",
       "\n",
-      "{'max_depth': 6, 'min_weight_fraction_leaf': 0.006}\n",
-      "The score of the training set is 0.6056829209020435\n",
-      "The score of the testing set is 0.5751440641192962\n"
+      "{'max_depth': 10, 'min_weight_fraction_leaf': 0.006}\n",
+      "The score of the training set is 0.6776353739731492\n",
+      "The score of the testing set is 0.5850227675341833\n"
      ]
     }
    ],
    "source": [
     "# Import modules\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
     "\n",
     "# Define houses df & subsets\n",
-    "houses = properties #[properties['type of property'] == 'HOUSE']\n",
-    "print(\"There are\", houses.shape[0], \"rows before cleaning.\")\n",
-    "houses = cleanup.clean_outliers(houses)\n",
-    "houses = cleanup.drop_column(houses, ['id', 'type_of_property', 'subtype_of_property', 'province', 'locality', 'postalCode'])\n",
-    "houses = cleanup.drop_column(houses, ['garden_area', 'terrace_area','number_of_facades','open_fire'])\n",
+    "properties = properties #[properties['type of property'] == 'HOUSE']\n",
+    "print(\"There are\", properties.shape[0], \"rows before cleaning.\")\n",
+    "# properties = cleanup.clean_outliers(properties)\n",
+    "properties = cleanup.drop_column(properties, ['id', 'type_of_property', 'subtype_of_property', 'province', 'locality', 'postalCode'])\n",
+    "properties = cleanup.drop_column(properties, ['garden_area', 'terrace_area','number_of_facades','open_fire'])\n",
     "# Remove all properties missing a living area\n",
-    "houses = houses[houses['living_area'] != 0]\n",
+    "properties = properties[properties['living_area'] != 0]\n",
     "\n",
-    "print(\"There are\", houses.shape[0], \"rows after cleaning.\\n\")\n",
-    "X = cleanup.drop_column(houses, 'price').to_numpy()\n",
-    "y = houses['price'].to_numpy()\n",
+    "print(\"There are\", properties.shape[0], \"rows after cleaning.\\n\")\n",
+    "X = cleanup.drop_column(properties, 'price').to_numpy()\n",
+    "y = properties['price'].to_numpy()\n",
     "\n",
     "#Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)\n",
@@ -90,7 +82,7 @@
     "# With GridsearchCV\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "regressor = DecisionTreeRegressor()\n",
-    "params = {'max_depth': [ 4, 6, 8, 10, 12], 'min_weight_fraction_leaf': [0.002, 0.003, 0.0035, 0.004, 0.0045, 0.006]}\n",
+    "params = {'max_depth':  [10, 12, 14, 16, 18], 'min_weight_fraction_leaf': [0.001, 0.002, 0.003, 0.0035, 0.004, 0.0045, 0.006]}\n",
     "grid_search = GridSearchCV(regressor, params, cv=10)\n",
     "grid_search.fit(X_train, y_train)\n",
     "best_params = grid_search.best_params_\n",
@@ -103,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the test data the model predicts a mean average house price of 464329.48 €.\n",
+      "For the test data the model predicts a mean average house price of 539611.48 €.\n",
       "\n",
       "For a house with:\n",
       "\n",
@@ -125,7 +117,7 @@
       " No swimming pool\n",
       " Comes renovated\n",
       "\n",
-      " The model predicts a price of:  790846.15 €.\n"
+      " The model predicts a price of:  539833.33 €.\n"
      ]
     }
    ],
@@ -155,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -268,25 +260,24 @@
        "2399            0.0                      1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "houses.head(3)"
+    "properties.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydantic import BaseModel\n",
     "\n",
     "class propmodel(BaseModel):\n",
-    "    price: float\n",
     "    number_of_bedrooms: float\n",
     "    living_area: float\n",
     "    fully_equipped_kitchen: float\n",
@@ -297,6 +288,150 @@
     "    total_land_area: float\n",
     "    swimming_pool: float\n",
     "    state_of_the_building: float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "import uvicorn\n",
+    "app = FastAPI()\n",
+    "pickle_in = open('../data/model.pkl', 'rb')\n",
+    "regressor = pickle.load(pickle_in)\n",
+    "\n",
+    "@app.get('/')\n",
+    "def home():\n",
+    "    return {\"Intro\" : \"Welcome to the model. To use this model you need to input the following parameters as a json\"}\n",
+    "\n",
+    "@app.get('/pricepredict')\n",
+    "def predict(data: propmodel):\n",
+    "    print(data)\n",
+    "    number_of_bedrooms = data['number_of_bedrooms']\n",
+    "    living_area = data['living_area']\n",
+    "    fully_equipped_kitchen = data['fully_equipped_kitchen']\n",
+    "    furnished = data['furnished']\n",
+    "    terrace = data['terrace']\n",
+    "    garden = data['garden']\n",
+    "    total_property_area = data['total_property_area']\n",
+    "    total_land_area = data['total_land_area']\n",
+    "    swimming_pool = data['swimming_pool']\n",
+    "    state_of_the_building = data['state_of_the_building']\n",
+    "    print(\n",
+    "        \"You can expect the price to be\", \n",
+    "        regressor.predict([[\n",
+    "            number_of_bedrooms,\n",
+    "            living_area,\n",
+    "            fully_equipped_kitchen,\n",
+    "            furnished,\n",
+    "            terrace,\n",
+    "            garden,\n",
+    "            total_property_area,\n",
+    "            total_land_area,\n",
+    "            swimming_pool,\n",
+    "            state_of_the_building\n",
+    "        ]]),   \n",
+    "        \"€ for a property with the above variables.\"\n",
+    "    )\n",
+    "    prediction = regressor.predict([[\n",
+    "        number_of_bedrooms,\n",
+    "        living_area,\n",
+    "        fully_equipped_kitchen,\n",
+    "        furnished,\n",
+    "        terrace,\n",
+    "        garden,\n",
+    "        total_property_area,\n",
+    "        total_land_area,\n",
+    "        swimming_pool,\n",
+    "        state_of_the_building\n",
+    "    ]])\n",
+    "    return {\n",
+    "        'prediction': round(prediction[0],2)\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'number_of_bedrooms': 2, 'living_area': 500, 'fully_equipped_kitchen': 0, 'furnished': 0, 'terrace': 0, 'garden': 0, 'total_property_area': 10000, 'total_land_area': 205, 'swimming_pool': 0, 'state_of_the_building': 0}\n",
+      "You can expect the price to be [3452500.] € for a property with the above variables.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'prediction': 3452500.0}"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\n",
+    "    {\n",
+    "        'number_of_bedrooms' : 2,\n",
+    "        'living_area': 500,\n",
+    "        'fully_equipped_kitchen': 0,\n",
+    "        'furnished': 0,\n",
+    "        'terrace': 0,\n",
+    "        'garden': 0,\n",
+    "        'total_property_area': 10000,\n",
+    "        'total_land_area': 205,\n",
+    "        'swimming_pool': 0,\n",
+    "        'state_of_the_building': 0\n",
+    "    }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0115482 , 0.04940154, 0.00835968, 0.        , 0.00552764,\n",
+       "       0.0020334 , 0.89172471, 0.01447442, 0.01577649, 0.00115392])"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regressor.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.tree import plot_tree\n",
+    "\n",
+    "# Train the decision tree regressor with the best hyperparameters\n",
+    "\n",
+    "# Get the column names as a list\n",
+    "#feature_names = cleanup.drop_column(properties, 'price').columns.tolist()\n",
+    "\n",
+    "# Visualize the decision tree\n",
+    "#plt.figure(figsize=(200, 150))\n",
+    "#plot_tree(regressor, feature_names=feature_names, filled=True, rounded=True)\n",
+    "#plt.show()"
    ]
   }
  ],
