Analysis graphs added to assets. README.md updated.

--- a/model-building/4_data_modeling_model.ipynb
+++ b/model-building/4_data_modeling_model.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Autoload module updates\n",
     "%load_ext autoreload\n",
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +40,9 @@
       "There are 6347 rows before cleaning.\n",
       "There are 3950 rows after cleaning.\n",
       "\n",
-      "{'max_depth': 10, 'min_weight_fraction_leaf': 0.006}\n",
-      "The score of the training set is 0.6776353739731492\n",
-      "The score of the testing set is 0.5850227675341833\n"
+      "{'max_depth': 10, 'min_weight_fraction_leaf': 0.003}\n",
+      "The score of the training set is 0.720845669586309\n",
+      "The score of the testing set is 0.589500430816477\n"
      ]
     }
    ],
@@ -95,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the test data the model predicts a mean average house price of 539611.48 €.\n",
+      "For the test data the model predicts a mean average house price of 538585.83 €.\n",
       "\n",
       "For a house with:\n",
       "\n",
@@ -117,7 +108,7 @@
       " No swimming pool\n",
       " Comes renovated\n",
       "\n",
-      " The model predicts a price of:  539833.33 €.\n"
+      " The model predicts a price of:  679461.54 €.\n"
      ]
     }
    ],
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,114 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>number_of_bedrooms</th>\n",
-       "      <th>living_area</th>\n",
-       "      <th>fully_equipped_kitchen</th>\n",
-       "      <th>furnished</th>\n",
-       "      <th>terrace</th>\n",
-       "      <th>garden</th>\n",
-       "      <th>total_property_area</th>\n",
-       "      <th>total_land_area</th>\n",
-       "      <th>swimming_pool</th>\n",
-       "      <th>state_of_the_building</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2397</th>\n",
-       "      <td>750000.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>513.0</td>\n",
-       "      <td>415.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2398</th>\n",
-       "      <td>1390000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>153.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2399</th>\n",
-       "      <td>670000.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>189.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          price  number_of_bedrooms  living_area  fully_equipped_kitchen  \\\n",
-       "2397   750000.0                 6.0          1.0                     0.0   \n",
-       "2398  1390000.0                 3.0          1.0                     1.0   \n",
-       "2399   670000.0                 4.0          1.0                     1.0   \n",
-       "\n",
-       "      furnished  terrace  garden  total_property_area  total_land_area  \\\n",
-       "2397        0.0      1.0     1.0                513.0            415.0   \n",
-       "2398        0.0      1.0     0.0                153.0              0.0   \n",
-       "2399        0.0      1.0     1.0                189.0              0.0   \n",
-       "\n",
-       "      swimming_pool  state_of_the_building  \n",
-       "2397            0.0                      0  \n",
-       "2398            0.0                      1  \n",
-       "2399            0.0                      1  "
+       "(3950, 11)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "properties.head(3)"
+    "properties.shape"
    ]
   },
   {
